# tardis

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  file.pack  file2.txt  vcpkg.txt
.github/workflows/: build.yaml
config/: config.h.in
flatbuf/: CMakeLists.txt  packfile.fbs
include/: Checksum.h  FlatBufferHelper.h  Logger.h  Packfile.h  PackfileManager.h  Rollsum.h  Signature.h  StorageHandler.h  Utils.h
include/tardis/: checksum.h  logger.h  meta.h  packfile.h  packfile_manager.h  repository.h  rollsum.h  signature.h  storage_handler.h  tree.h
include/tardis/utility/: compression.h  flatbuffers_helper.h  utils.h
lib/: CMakeLists.txt  PackfileManager.cpp  RollSum.cpp  Signature.cpp  logger.cpp  packfile_manager.cpp  repository.cpp  rollsum.cpp  signature.cpp
lib/utility/: utils.cpp
src/: CMakeLists.txt  main.cpp
